--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
     <img src="images/image-equilibrium.jpg" class="card-icon" alt="equilibrium icon">
     <a href="#">Equilibrium #3429</a>
     <p>Our Equilibrium collection promotes balance and calm.</p>
-    <div class="etherium-cost"> 
-      <img src="images/icon-ethereum.svg" alt ="etherium icon">0.041 ETH
+
+    <div class="purchase-information">
+      <div class="etherium-cost"> 
+        <img src="images/icon-ethereum.svg" alt ="etherium icon">0.041 ETH
+      </div>
+      <div class="time-left"> <img src="images/icon-clock.svg" alt="clock icon">3 days left</div>
     </div>
-    <div class="time-left"> <img src="images/icon-clock.svg" alt="clock icon">3 days left</div>
+
+    <hr>
+
     <div class="user-information">
-      <img src="images/image-avatar.png" alt ="avatar icon" height="30px">Creation of <a href="#">Jules Wyvern</a>
-    </div>
+      <img src="images/image-avatar.png" alt ="avatar icon" height="30px">Creation of &nbsp<a href="#">Jules Wyvern</a>
+    </div> 
   </div>
  
   <div class="attribution">
