90% complete, only icon interactivity needed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 </head>
 <body>
 
+  <div class="color-block"></div>
+
   <div class="card">
-    <img src="images/image-equilibrium.jpg" class="card-icon" alt="equilibrium icon">
+    <a href="#" class="card-icon">
+      <img src="images/image-equilibrium.jpg" alt="NFT Icon">
+      <div class="icon-interactive">
+        <img src="images/icon-view.svg" alt="hovering">
+      </div>
+    </a>
+    
     <a href="#">Equilibrium #3429</a>
     <p>Our Equilibrium collection promotes balance and calm.</p>
 
@@ -26,7 +34,10 @@
     <hr>
 
     <div class="user-information">
-      <img src="images/image-avatar.png" alt ="avatar icon" height="30px">Creation of &nbsp<a href="#">Jules Wyvern</a>
+      <div class="avatar-icon">
+      <img src="images/image-avatar.png" alt ="avatar icon" >
+      </div>
+      Creation of &nbsp<a href="#">Jules Wyvern</a>
     </div> 
   </div>
  
@@ -34,5 +45,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Franco Ramos</a>.
   </div>
+
+  <div class="color-block"></div>
+  
 </body>
 </html>
