hover action on icon is implemented

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
   <div class="color-block"></div>
 
   <div class="card">
-    <a href="#" class="card-icon">
-      <img src="images/image-equilibrium.jpg" alt="NFT Icon">
-      <div class="icon-interactive">
-        <img src="images/icon-view.svg" alt="hovering">
-      </div>
+    <a href="#" class="card-icon-target">
+      <img src="images/image-equilibrium.jpg" alt="NFT Icon" class="card-icon">
+      <img src="images/icon-view.svg" alt="hovering" class="card-hover-icon">
     </a>
     
     <a href="#">Equilibrium #3429</a>
@@ -38,15 +36,18 @@
       <img src="images/image-avatar.png" alt ="avatar icon" >
       </div>
       Creation of &nbsp<a href="#">Jules Wyvern</a>
+      <!--validation error on the empty character-->
     </div> 
   </div>
  
-  <div class="attribution">
+  <div class="color-block"></div>
+
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Franco Ramos</a>.
-  </div>
+  </footer>
 
-  <div class="color-block"></div>
+  
   
 </body>
 </html>
